# zklink_dart_sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
android/: CMakeLists.txt
ios/: zklink.podspec
lib/: api.dart  frb_generated.dart  frb_generated.io.dart
linux/: CMakeLists.txt
macos/: zklink.podspec
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs
src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
src/api/: simple.rs
windows/: CMakeLists.txt
