[package]
name = "zklink"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.30"
serde_json = "1.0"
anyhow = "1.0"
zklink_sdk_types = { git = "https://github.com/zkLinkProtocol/zklink_sdk.git", branch = "main" }
zklink_sdk_signers = { git = "https://github.com/zkLinkProtocol/zklink_sdk.git", branch = "main" }
zklink_sdk_interface = { git = "https://github.com/zkLinkProtocol/zklink_sdk.git", branch = "main" }

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
